Revert "fixed header elements alignment, added routing login, added login pag…"

--- a/src/layouts/UserLayoutStyles.css
+++ b/src/layouts/UserLayoutStyles.css
@@ -1,7 +1,3 @@
-.site-layout {
-    background-color: grey;
-}
-
 .admin-layout-header {
     width: 100%;
     /* display: flex; */
@@ -9,24 +5,17 @@
     /* justify-content: space-between; */
     background-color: #FFCCCC;
     z-index: 1;
-    /* padding-block: 0 !important; */
-    /* margin-block: 0 !important; */
-    /* padding: 0 !important; */
-    /* margin: 0 !important; */
+    padding-block: 0 !important;
+    margin-block: 0 !important;
     position: fixed;
-    display: block !important;
 }
 
 .header-logo {
     width: 100%;
     display: flex;
     align-items: center;
-    flex-direction: row-reverse;
-}
-.header-logo > h5 {
-    margin-inline-end: 0 !important;
-    margin-block-start: 0 !important;
-    margin-block-end: 0 !important;
+    /* flex-direction: row-reverse; */
+    /* background-color: red; */
 }
 
 .header-logo > img {
@@ -37,12 +26,7 @@
 }
 
 .header-input {
-    width: 180px;
-    margin: 0 5px;
-}
-.header-btn {
-    margin: 0 4px;
-    border: 1px solid #000;
+    width: 100px;
 }
 
 .main-sider {
@@ -54,11 +38,6 @@
     height: auto
 }
 
-.main-content {
-    padding: 0.5rem;
-    margin-top: 3.5rem;
-    background-color: white;
-}
 
 .footer {
     text-align: center;
